--- a/R11_different_ChartType_v2.0.rdl
+++ b/R11_different_ChartType_v2.0.rdl
@@ -1096,7 +1096,7 @@ Order by 1 asc</CommandText>
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value />
+                    <Value>Test</Value>
                     <Style>
                       <FontFamily>Segoe UI Light</FontFamily>
                       <FontSize>28pt</FontSize>
@@ -1223,7 +1223,7 @@ Order by 1 asc</CommandText>
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox26</rd:DefaultName>
-            <Top>40.18491mm</Top>
+            <Top>37.71547mm</Top>
             <Left>4.33387mm</Left>
             <Height>29.63333mm</Height>
             <Width>28.31042mm</Width>
